
2000-07-24-Montel laurent <montell@club-internet.fr>
----------------------------------------------------
-Now when a formula is a time or date, change format to time or date
-Now kspread doesn't recognize money format into formula
because in France for example when you write : =F6, kspread
believes that is 6.00 F
=>it's not a good idea.
It's the same think for DM

2000-07-26-Montel laurent <montell@club-internet.fr>
----------------------------------------------------
-Bug fix : now adjust area reworks when you change size font
or set "vertical text" or change angle etc...
Text size and position are refreshing
-Bug fix : now text color works when you used "conditional cell
attributes" and when you make "negative format" (text color
is red)

2000-07-27-Montel laurent <montell@club-internet.fr>
----------------------------------------------------
-Move m_rotateAngle code and  FormatNumber code to kspread_layout.cc
=>now undo works for formatnumber and rotate.


2000-07-28-Montel laurent <montell@club-internet.fr>
----------------------------------------------------
-Now format works
-You can put different date format.

2000-07-29-Montel laurent <montell@club-internet.fr>
----------------------------------------------------
-Move "Comment" code to kspread_layout
=>undo works with "comment"
-bug fix
-Bug fix : now ajust area works when a text size is bigger than
cell size. =>( ** )

2000-07-31-Montel laurent <montell@club-internet.fr>
----------------------------------------------------
-Now Negative and Positive format works with fraction format and others

2000-08-02-Montel laurent <montell@club-internet.fr>
----------------------------------------------------
-Now when you insert/remove column/row/cell and there is a chart you refresh it.

2000-08-04-Montel laurent <montell@club-internet.fr>
----------------------------------------------------
-Fix a big bug in dependence cell for example =A1+C1
Now it works correctly.