@@ -867,3 +867,15 @@ cell size. =>( ** )
 ----------------------------------------------------
 -Fix a big bug in dependence cell for example =A1+C1
 Now it works correctly.
+
+2000-08-06-Montel laurent <montell@club-internet.fr>
+----------------------------------------------------
+-fixed :Bug#7608
+-Improved kspread_dlg_formula now when there is a text into cell
+before to call kspread_dlg_formula, kspread used this text
+and add '=' at the beginning and "+" at the end
+=>you can completed a formula into kspread_dlg_formula.
+For example in cell A1 : =cos(12)
+=>call kspread_dlg_formula => =cos(12)+
+cell A1 : 10
+=>call : =10+
